--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,59 +39,59 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-scons
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\scons-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\scons-tools
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\scons-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\scons-tools
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: bin\conda\python-parse
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-parse
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\libtoolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\libtoolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-meta
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-meta
-      CONDA_VERSION: 3
-    # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
+    # - CONDA_RECIPE: bin\conda\libtoolchain
     #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
+    # - CONDA_RECIPE: bin\conda\libtoolchain
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\boost-meta
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-meta
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
       CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
       CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    - CONDA_RECIPE: bin\conda\statiskit-tools
       CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\libtoolchain-dev
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    - CONDA_RECIPE: bin\conda\statiskit-tools
       CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\STL\bin\conda\libstatiskit_stl-dev
     # - CONDA_RECIPE: share\git\STL\bin\conda\libstatiskit_stl
@@ -104,6 +104,12 @@ environment:
     # - CONDA_RECIPE: share\git\LinAlg\bin\conda\python-statiskit_linalg
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\LinAlg\bin\conda\python-statiskit_stl
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\LinAlg\bin\conda\libstatiskit_core-dev
+    # - CONDA_RECIPE: share\git\LinAlg\bin\conda\libstatiskit_core
+    # - CONDA_RECIPE: share\git\LinAlg\bin\conda\python-statiskit_core
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\LinAlg\bin\conda\python-statiskit_core
     #   CONDA_VERSION: 3
     # - CONDA_RECIPE: bin\conda\libstatiskit-dev
     # - CONDA_RECIPE: bin\conda\libstatiskit
