--- a/travis.yml
+++ b/travis.yml
@@ -38,62 +38,50 @@ services:
   - docker
   
 env:
-  - DOCKER_CONTEXT=bin/docker/linux-32
-    DOCKER_CONTAINER=linux-32
-    CONDA_VERSION=2
-  - DOCKER_CONTEXT=bin/docker/linux-32
-    DOCKER_CONTAINER=linux-32
-    CONDA_VERSION=3
-  - DOCKER_CONTEXT=bin/docker/linux-64
-    DOCKER_CONTAINER=linux-64
-    CONDA_VERSION=2
-  - DOCKER_CONTEXT=bin/docker/linux-64
-    DOCKER_CONTAINER=linux-64
-    CONDA_VERSION=3
+  # - DOCKER_CONTEXT=bin/docker/linux-32
+  #   DOCKER_CONTAINER=linux-32
+  #   CONDA_VERSION=2
+  # - DOCKER_CONTEXT=bin/docker/linux-32
+  #   DOCKER_CONTAINER=linux-32
+  #   CONDA_VERSION=3
+  # - DOCKER_CONTEXT=bin/docker/linux-64
+  #   DOCKER_CONTAINER=linux-64
+  #   CONDA_VERSION=2
+  # - DOCKER_CONTEXT=bin/docker/linux-64
+  #   DOCKER_CONTAINER=linux-64
+  #   CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/vcs
   # - CONDA_RECIPE=bin/conda/python-scons
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-scons
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/python-parse
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-parse
   #   CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/llvm-suite
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/boost-suite
-    CONDA_VERSION=2
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-suite
-    CONDA_VERSION=3
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-meta
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/boost-meta
-    CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
+  # - CONDA_RECIPE=bin/conda/libtoolchain
   #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
+  # - CONDA_RECIPE=bin/conda/libtoolchain
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/statiskit-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/statiskit-tools
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/boost-suite
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/boost-suite
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/boost-meta
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/boost-meta
+  #   CONDA_VERSION=3
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
   #   TRAVIS_WAIT=45
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
@@ -113,6 +101,14 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/libtoolchain-dev
     CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/statiskit-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/statiskit-tools
+    CONDA_VERSION=3
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
   # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
@@ -124,6 +120,12 @@ env:
   # - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_linalg
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_stl
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core-dev
+  # - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core
+  # - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
   #   CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/libstatiskit-dev
   # - CONDA_RECIPE=bin/conda/libstatiskit
